# ait

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: agent-transcript-memory-design.md  ai-vcs-mvp-spec.md  ait-memory-architecture-design.md  ait-memory-implementation-details.md  architecture-refactor-plan.md  claims-benchmark-plan.md  claude-code-live-smoke.md  claude-code-run-worktree.md  code-review-2026-04-30.md  code-review-2026-05-01.md  code-review-claude-followup-2-2026-05-01.md  code-review-claude-followup-2026-05-01.md  code-review-claude-followup-3-2026-05-01.md  code-review-stage4-acceptance-2026-05-01.md  code-review-stage4-refactor-2026-05-01.md  dogfood-session-1.md  dogfood-session-2.md  dogfood-session-3.md  getting-started.md  implementation-notes.md  implementation-plan.md  llm-memory-github-research.md  long-term-memory-acceptance.md  long-term-memory-design.md  memory-retrieval-eval-spec.md  memory-temporal-ranking-design-zh.md  parallel-development.md  production-hardening-design.md  protocol-appendix.md  release-checklist.md  repo-brain-acceptance.md  repo-brain-briefing-design.md  repo-brain-design.md  seo-strategy.md
docs/marketing/: README.md  awesome-list-prs.md  devto-article-draft.md  product-hunt-copy.md  reddit-drafts.md  show-hn-draft.md
examples/: claude_code_hook.py  harness_demo.py
npm/ait-vcs/: README.md  package.json
overrides/: main.html
site-docs/: facts.md  getting-started.md  index.md  llms.txt  robots.txt  why-ait.md
site-docs/compare/: git-worktree-naked-vs-ait.md
site-docs/integrations/: aider.md  claude-code.md  codex.md  cursor.md  gemini.md  shell.md
site-docs/reference/: commands.md
site-docs/zh-TW/: getting-started.md  index.md  why-ait.md
specs/001-worktree-cleanup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-split-query-module/: audit.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-split-runner-module/: audit.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-split-adapters-module/: audit.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-reconcile-local-artifacts/: data-model.md  plan.md  (+4 more)
tests/: test_adapters.py  test_aider_capture.py  test_app_flow.py  test_brain.py  test_claude_code_hook.py  test_cleanup.py  test_cli_adapters.py  test_cli_run.py  test_cli_shell.py  test_codex_hook.py  test_concurrency.py  test_config.py  test_context.py  test_cursor_capture.py  test_daemon_concurrency.py  test_daemon_e2e.py  test_daemon_lifecycle.py  test_daemon_reaper.py  test_daemon_verifier_threads.py  test_db_migrations.py  test_db_repositories.py  test_dev_server.py  test_events.py  test_gemini_hook.py  test_harness.py  test_hooks.py  test_idresolver.py  test_ids.py  test_init_shell_install.py  test_lifecycle.py  test_local_artifacts.py  test_memory.py  test_memory_security.py  test_outcome.py  test_protocol.py  test_protocol_transport.py  test_query.py  test_reconcile.py  test_redaction.py  test_refactor_smoke.py  (+8 more)
(+141 files in other folders)
