[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ait-vcs"
version = "0.55.40"
description = "Git worktree isolation and provenance for AI coding agents — wraps Claude Code, Codex, Aider, Gemini CLI, Cursor. MIT, Python, no SaaS."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  {name = "sin-chengchen"}
]
keywords = [
  "ai",
  "ai-coding",
  "agentic-coding",
  "agent-harness",
  "agent-isolation",
  "claude-code",
  "claude-code-wrapper",
  "codex",
  "codex-wrapper",
  "aider",
  "aider-wrapper",
  "gemini-cli",
  "cursor",
  "git",
  "git-worktree",
  "vcs",
  "provenance",
  "code-provenance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://m24927605.github.io/ait/"
Documentation = "https://m24927605.github.io/ait/"
Repository = "https://github.com/m24927605/ait"
"Source Code" = "https://github.com/m24927605/ait"
"Bug Tracker" = "https://github.com/m24927605/ait/issues"
Issues = "https://github.com/m24927605/ait/issues"
"Release Notes" = "https://github.com/m24927605/ait/releases"
Changelog = "https://github.com/m24927605/ait/blob/main/CHANGELOG.md"

[project.scripts]
ait = "ait.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ait = [
  "resources/claude-code/*.py",
  "resources/claude-code/*.json",
  "resources/codex/*.py",
  "resources/codex/*.json",
  "resources/gemini/*.py",
  "resources/gemini/*.json",
]
